--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
@@ -30,11 +30,10 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.firebase:firebase-messaging:12.0.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.onesignal:OneSignal:[3.8.1, 3.99.99)'
@@ -46,5 +45,6 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.26.0'
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.android.support.test:runner:1.0.2-beta1'
 }
 apply plugin: 'com.google.gms.google-services'
