--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,16 @@
         </activity>
         <activity
             android:label="@string/app_name"
+            android:name=".Walkthrough.ThemeSelection"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".Walkthrough.FontSelection"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
             android:name=".PaymentGateway.InitialScreenActivity"
             android:screenOrientation="portrait" >
         </activity>
