--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,6 +118,16 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:label="@string/app_name"
+            android:name=".Walkthrough.LocationSelection"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".Walkthrough.LanguageSelection"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
             android:name=".YoutubeVideoPlayer"
