--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
                 onesignal_google_project_number: "534790179677"]
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 53
-        versionName "4.4.17"
+        versionCode 54
+        versionName "4.4.18"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -33,7 +33,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    androidTestImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.onesignal:OneSignal:[3.8.1, 3.99.99)'
@@ -45,6 +45,6 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.26.0'
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
-    implementation 'com.android.support.test:runner:1.0.2-beta1'
+    implementation 'com.android.support.test:runner:1.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
