--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:label="@string/app_name"
+            android:name=".Explorenew.CompanyList"
+            android:screenOrientation="portrait" >
+        </activity>
         <activity
             android:label="@string/app_name"
             android:name=".Walkthrough.Aboutapp"
