--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
         </activity>
         <activity
             android:label="@string/app_name"
+            android:name=".Explorenew.ShippingAddress"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
             android:name=".Explorenew.ProductDetail"
             android:screenOrientation="portrait" >
         </activity>
