--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'com.android.support.test:runner:1.0.2'
+    implementation 'com.razorpay:checkout:1.5.2'
 }
 apply plugin: 'com.google.gms.google-services'
