--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,11 @@
         </activity>
         <activity
             android:label="@string/app_name"
+            android:name=".Explorenew.DoctoronCallActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
             android:name=".Explorenew.PaymentGateway.Paymentactivity"
             android:screenOrientation="portrait" >
         </activity>
